--- a/ai4-metadata.yml
+++ b/ai4-metadata.yml
@@ -19,10 +19,12 @@ links:
   # weights: http://add-some-weights-url.com
   # citation: http://add-some-DOI-url.com
   # base_model: http://add-some-link-to-another-model.com
-#tags:        # required property, add user-defined tags that you consider relevant
-  # - deep learning
-#tasks:       # required property, uncomment together with relevant items
-  # - Computer Vision
+tags:        # required property, add user-defined tags that you consider relevant
+  - deep learning
+  - data fusion
+  - remote sensing
+tasks:       # required property, uncomment together with relevant items
+  - Computer Vision
   # - Natural Language Processing
   # - Time Series
   # - Recommender Systems
@@ -38,22 +40,22 @@ links:
   # - Transfer Learning
   # - Uncertainty Estimation
   # - Other
-#categories:  # required property, uncomment together with relevant items
+categories:  # required property, uncomment together with relevant items
   # - AI4 trainable
   # - AI4 pre trained
-  # - AI4 inference
+  - AI4 inference
   # - AI4 tools
-#libraries:   # required property, uncomment together with relevant items
-  # - TensorFlow
+libraries:   # required property, uncomment together with relevant items
+  - TensorFlow
   # - PyTorch
   # - Keras
-  # - Scikit-learn
+  - Scikit-learn
   # - XGBoost
   # - LightGBM
   # - CatBoost
   # - Other
-#data-type:   # optional, uncomment together with relevant items
-  # - Image
+data-type:   # optional, uncomment together with relevant items
+  - Image
   # - Text
   # - Time Series
   # - Tabular
@@ -61,12 +63,12 @@ links:
   # - Audio
   # - Video
   # - Other
-#resources:   # optional, uncomment together with relevant items
-  #inference:
-  #  cpu: 2
-  #  gpu: 0
-  #  memory_MB: 1000
+resources:   # optional, uncomment together with relevant items
+  inference:
+    cpu: 2
+    gpu: 1
+    memory_MB: 40000
   #  gpu_memory_MB: 1000
   #  gpu_compute_capability: 100.0
   #  #  we use on purpose a unreasonable compute capability so that we can test the warning system
-  #  storage_MB: 1000  
+    storage_MB: 25000  
