--- a/.sqa/docker-compose.yml
+++ b/.sqa/docker-compose.yml
@@ -2,13 +2,16 @@ version: "3.6"
 
 services:
   thisrepo-testing:
-    image: "ai4oshub/ci-images:python3.10"
+    #image: "ai4oshub/ci-images:python3.11"
+    build:
+      context: ./.sqa
+      dockerfile: Dockerfile.override
     container_name: "${BUILD_TAG}"
     hostname: "${BUILD_TAG}"
     working_dir: /srv
     command: >
       sh -c "git config --global --add safe.directory /srv &&
-             tail -f /dev/null"
+               tail -f /dev/null"
     volumes:
       - type: bind
         source: ./
