--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
 webargs~=5.5.3
 deepaas>=2.1.0
+gdal==3.4.1
+numpy<2
+opencv-python<4.12
+scikit-image
+xmltodict
+tqdm
+rasterio
+xarray
+shapely
+rioxarray
+netCDF4
+keras
+tensorflow
