--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps = -r{toxinidir}/requirements-test.txt
 [testenv:qc.sty]
 commands =
   flake8 --statistics --tee --output-file={toxinidir}/flake8.log \
-  --max-line-length=80 --extend-select=B950 --extend-ignore=E203,E501,E701 \  # add this line to support Black formatter
+  --max-line-length=80 --extend-select=B950 --extend-ignore=E203,E501,E701 \
   --format=pylint sentinel_data_fusion tests
 
 # important for Jenkins publishing of results: store results in subdirectory
