--- a/.sqa/Dockerfile.override
+++ b/.sqa/Dockerfile.override
@@ -12,3 +12,5 @@ RUN apt-get update && \
 
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install gdal==3.4.1
+
+CMD ["/usr/bin/tail" "-f" "/dev/null"]
