--- a/ai4-metadata.yml
+++ b/ai4-metadata.yml
@@ -1,89 +1,71 @@
+---
 metadata_version: 2.0.0
 title: Sentinel-2 and Sentinel-3 data fusion with CNN and GAN
-summary: Fusion of Sentinel-2 and Sentinel-3 data to increse the spatial resolution of Sentinel-3 bands (21) to 10m"
-description: |-
-  Multispectral satellites like the Sentinel-2A/B twin satellites with high spatial resolution (10, 20, and 60 meters Ground Sample Distance - GSD), provide multispectral images with only 13 spectral bands, while high spectral resolution satellites like the Sentinel-3 mission, with 21 spectral bands, have a minimum spatial resolution of 300 meters. This model implements a data-driven fusion method that combines the data from these two satellite missions to obtain new products with the best of both in terms of spatial and spectral resolution. For this purpose, a powerful neural network has been trained with data from different latitudes and terrains at lower resolutions
-  
+summary: Fusion of Sentinel-2 and Sentinel-3 data to increse the spatial
+  resolution of Sentinel-3 bands (21) to 10m"
+description: >-
+  Multispectral satellites like the Sentinel-2A/B twin satellites
+  with high spatial resolution (10, 20, and 60 meters Ground Sample Distance -
+  GSD), provide multispectral images with only 13 spectral bands, while high
+  spectral resolution satellites like the Sentinel-3 mission, with 21 spectral
+  bands, have a minimum spatial resolution of 300 meters. This model implements
+  a data-driven fusion method that combines the data from these two satellite
+  missions to obtain new products with the best of both in terms of spatial and
+  spectral resolution. For this purpose, a powerful neural network has been
+  trained with data from different latitudes and terrains at lower resolutions
+
+
   **Data**
-  
+
+
   To train the networks, it was assumed that the transfer of details from HR bands to LR bands is scale-invariant and depends only on the scale factor between resolutions, which in this case is 30. That is, the mappings 300m->10m and 9km->300m were considered equivalent, allowing the second case to be trained and applied to the first case. Moreover, images were split into squared patches for computational reasons. Finally, the dataset was divided into training, validation, and testing sets.
-  
+
+
   The source is Copernicus data, where different scenarios have been selected to represent surface diversity (Coast, Desert, Urban, etc.) with a maximum of one day of difference between Sentinel-2 and Sentinel-3 data and with a minimum of cloud coverage.
 
 
-**Inference**
-This module supports inference where different input information is required:
 
-* Copernicus login data (input/output)
-* Area of interest - Bounding Box in N, W, S, E
-* Start and End Dates
-* Output name
+  **Inference**
 
-The output are generated in GeoTiFF format.
-  
-# doi: http://add-some-DOI-url.com
+
+  This module supports inference where different input information is required.
+
+
+  * Copernicus login data (input/output)
+
+  * Area of interest - Bounding Box in N, W, S, E
+
+  * Start and End Dates
+
+  * Output name
+
+
+  The output are generated in GeoTiFF format.
 dates:
-  created: "2025-07-22"
-  updated: "2025-07-22"
+  created: 2025-07-22
+  updated: 2025-07-22
 links:
   ai4_template: ai4-template/2.2.0
   source_code: https://github.com/ai4os-hub/sentinel-data-fusion
   docker_image: ai4oshub/sentinel-data-fusion
-  # documentation: http://add-some-documentation.com
-  # dataset: http://add-some-url-pointing-to-your-dataset.com
-  # weights: http://add-some-weights-url.com
-  # citation: http://add-some-DOI-url.com
-  # base_model: http://add-some-link-to-another-model.com
-tags:        # required property, add user-defined tags that you consider relevant
+tags:
   - deep learning
   - data fusion
   - remote sensing
-tasks:       # required property, uncomment together with relevant items
+tasks:
   - Computer Vision
-  # - Natural Language Processing
-  # - Time Series
-  # - Recommender Systems
-  # - Anomaly Detection
-  # - Regression
-  # - Classification
-  # - Clustering
-  # - Dimensionality Reduction
-  # - Generative Models
-  # - Graph Neural Networks
-  # - Optimization
-  # - Reinforcement Learning
-  # - Transfer Learning
-  # - Uncertainty Estimation
-  # - Other
-categories:  # required property, uncomment together with relevant items
-  # - AI4 trainable
+categories:
   - AI4 pre trained
   - AI4 inference
-  # - AI4 tools
-libraries:   # required property, uncomment together with relevant items
+libraries:
   - TensorFlow
-  # - PyTorch
-  # - Keras
   - Scikit-learn
-  # - XGBoost
-  # - LightGBM
-  # - CatBoost
-  # - Other
-data-type:   # optional, uncomment together with relevant items
+data-type:
   - Image
-  # - Text
-  # - Time Series
-  # - Tabular
-  # - Graph
-  # - Audio
-  # - Video
-  # - Other
-resources:   # optional, uncomment together with relevant items
+resources:
   inference:
     cpu: 2
     gpu: 1
     memory_MB: 40000
-  #  gpu_memory_MB: 1000
-  #  gpu_compute_capability: 100.0
-  #  #  we use on purpose a unreasonable compute capability so that we can test the warning system
-    storage_MB: 25000  
+    storage_MB: 25000
+
